--- a/projects.qmd
+++ b/projects.qmd
@@ -1,16 +1,16 @@
 ---
-title: "Current SAIL Team"
+title: "SAIL Projects"
 ---
 
 ## Working Projects
 
-<b>Assessment of Cyclical and Derivative-based Acute:Chronic Workload Ratios for Predicting Injuries in Collegiate Men's Basketball</b>
+**Assessment of Cyclical and Derivative-based Acute:Chronic Workload Ratios for Predicting Injuries in Collegiate Men's Basketball**
 
-Contributors: Conor Kerr, Doug Halverson, Khushi Shah
+*Contributors:* Conor Kerr, Doug Halverson, Khushi Shah
 
 ## Past Projects
 
-<b>Utilizing Training Load and Intensity to Predict Team Performance in NCAA Division I Men's Basketball</b>
+**Utilizing Training Load and Intensity to Predict Team Performance in NCAA Division I Men's Basketball**
 
-Contributors: Conor Kerr, Sam Moore, Doug Halverson, Abbie Smith-Ryan</br> Presented in April, 2023
-
+*Contributors:* Conor Kerr, Sam Moore, Doug Halverson, Abbie Smith-Ryan  
+*Presented:* April 2023
