--- a/apply.qmd
+++ b/apply.qmd
@@ -2,12 +2,16 @@
 title: "SAIL Undergraduate Student Analyst Application"
 ---
 
+<h2>Watch Video</h2>
+
+<iframe src="https://drive.google.com/file/d/1SR_RpecxTM59Fz41SxAt_vMsgcecABCb/preview" width="960" height="720" allow="autoplay"></iframe>
+
 <h2>View PDF</h2>
 
 <iframe src="attachments/SAIL-USA-2025-R.pdf" width="100%" height="500px" style="border: 1px solid #ccc; border-radius: 8px;">
 
 </iframe>
 
-<h2>Download Markdown File</h2>
+<h2>Download R Markdown File</h2>
 
 <a href="attachments/SAIL-USA-2025 R.Rmd" download> <button style="padding: 10px 16px; font-size: 1em; cursor: pointer;"> Download .Rmd File </button> </a>
