--- a/team.qmd
+++ b/team.qmd
@@ -23,7 +23,7 @@ SAIL brings together a diverse group of undergraduate students, graduate advisor
     <img src="imgs/Photos25/Faberman25.JPG" alt="Shane Faberman">
     <h4>Shane Faberman</h4>
     <p><em>Undergraduate Sports Analyst, 2024–Present</em></p>
-    <p><strong>Majors:</strong> Data Science and Computer Science</p>
+    <p><strong>Majors:</strong> Data Science and Statistics & Analytics</p>
     <p>Basketball, football, baseball, in-game decision-making, and team development</p>
   </div>
   <div class="team-member">
@@ -37,8 +37,8 @@ SAIL brings together a diverse group of undergraduate students, graduate advisor
     <img src="imgs/Photos25/Mouline25.JPG" alt="Yunus Mouline">
     <h4>Yunus Mouline</h4>
     <p><em>Undergraduate Sports Analyst, 2024–Present</em></p>
-    <p><strong>Majors:</strong> Statistics & Analytics and Mathematics (Spanish minor)</p>
-    <p>Basketball, track and field, predictive modeling, data visualization, and sports betting</p>
+    <p><strong>Majors:</strong> Statistics & Analytics and Economics (Data Science minor)</p>
+    <p>Basketball, track and field, predictive modeling, data visualization, and risk analysis</p>
   </div>
   <div class="team-member">
     <img src="imgs/Photos25/Sallaram25.JPG" alt="Aneesh Sallaram">
@@ -63,7 +63,6 @@ SAIL brings together a diverse group of undergraduate students, graduate advisor
   </div>
 </div>
 ```
-
 ## Graduate Advisors
 
 ```{=html}
@@ -98,7 +97,6 @@ SAIL brings together a diverse group of undergraduate students, graduate advisor
   </div>
 </div>
 ```
-
 ## Faculty Advisors
 
 ```{=html}
@@ -122,7 +120,6 @@ SAIL brings together a diverse group of undergraduate students, graduate advisor
     <p><strong>Ph.D. in Mathematics (Harvard University)</strong></p>
   </div>
 ```
-
 ## Alumni
 
 ```{=html}
